--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>{% block title %}{%endblock%}</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <head>
+        <title>{% block title %}{%endblock%}</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">     
+    </head>
 
 <bod class="bg-light">
 
@@ -13,7 +14,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Gestão de acessos - MIS</a>
 
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     {% block navbar %}{%endblock%}
                 </ul>
@@ -23,9 +24,24 @@
         {% block main %}{%endblock%}
     </main>
 
-        <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">Desenvolvido por: <a href="mailto:rhuan@rhuanlima.com.br">Rhuan Lima</a></p>
-        </footer>
+    <footer class="my-5 pt-5 text-muted text-center text-small">
+        <p class="mb-1">Desenvolvido por: <a href="mailto:rhuan@rhuanlima.com.br">Rhuan Lima</a></p>
+    </footer>
+    
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+
+
 </body>
 
 </html>
