--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -13,32 +13,19 @@
 {% block breadcrumbs%}
 <div class="breadcrumbs">
     <nav class="navbar navbar-expand-md">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'acessos_list'%}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'admin:acessos_acesso_add'%}">Cadastrar Novo</a>
-                    </li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <button class="btn nav-link dropdown-toggle" type="button" id="dropdownMenu2"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Relatório por Área
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                {% for area in areas %}
-                                <a href="{% url 'lista_areas' area.id %}">
-                                    <button class="dropdown-item" type="button">{{area.dsArea}}</button>
-                                </a>
-                                {% endfor %}
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group mr-2" role="group" aria-label="First group">
+                <a class="nav-link active btn btn-outline-secondary btn-lg" aria-current="page"
+                    href="{% url 'acessos_list'%}">Home</a>
             </div>
+            <div class="btn-group mr-2" role="group" aria-label="Second group">
+                <a class="nav-link btn btn-outline-secondary btn-lg"
+                    href="{% url 'admin:acessos_acesso_add'%}">Cadastrar Novo</a>
+            </div>
+            <div class="btn-group" role="group" aria-label="Third group">
+                <a class="nav-link btn btn-outline-secondary btn-lg" href="{% url 'all_areas'%}">Areas</a>
+            </div>
+        </div>
     </nav>
 </div>
 <!-- <li class="nav-item">
@@ -69,9 +56,6 @@
 
     {% translate 'Welcome,' %}
     <strong>{% firstof user.get_short_name user.get_username %}</strong>.
-
-
-
     {% if user.is_active and user.is_staff %}
     {% url 'django-admindocs-docroot' as docsroot %}
     {% if docsroot %}
